[package]
name = "rust_mc_proto"
description = "lightweight minecraft protocol support in pure rust"

repository = "https://github.com/MeexReay/rust_mc_proto"
license-file = "LICENSE"
readme = "README.md"
keywords = ["minecraft", "protocol", "packets", "lightweight"]

version = "0.1.16"
edition = "2021"

[dependencies]
flate2 = "1.0.34"
bytebuffer = "2.3.0"
uuid = "1.11.0"

[features]
default = []
atomic_compression = []