[package]
name = "rust_mc_proto"
description = "lightweight minecraft protocol support in pure rust"

repository = "https://git.meex.lol/MeexReay/rust_mc_proto"
license-file = "LICENSE"
readme = "README.md"
keywords = ["minecraft", "protocol", "packets", "lightweight"]

version = "0.1.17"
edition = "2021"

[dependencies]
flate2 = "1.0.35"
uuid = "1.11.0"

[features]
default = ["atomic_clone"]
atomic_clone = []