[package]
name = "rust_mc_proto"
description = "lightweight minecraft protocol support in pure rust"

repository = "https://git.meex.lol/MeexReay/rust_mc_proto"
license-file = "LICENSE"
readme = "README.md"
keywords = ["minecraft", "protocol", "packets", "lightweight"]

version = "0.1.17"
edition = "2021"

[dependencies]
flate2 = "1.1.1"
uuid = "1.16.0"

[features]
default = ["atomic_clone"]
atomic_clone = []